Mentor's comments